kubernetes/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  labels:
    app: sample
spec:
  type: ClusterIP
  ports:
    - name: service-1
      protocol: TCP
      port: 4001
      targetPort: 4001
    - name: service-2
      protocol: TCP
      port: 4002
      targetPort: 4002
  selector:
    app: sample
